# Computer-Graphics

./: .gitignore  LICENSE  README.md
OpenGL/: demo.cpp  makefile
OpenGL/Blending/: blending.cpp
OpenGL/Demo/: demo  demo.cpp
OpenGL/Fishing/: .clang-format  CMakeLists.txt  main.cpp  makefile
OpenGL/Fishing/header/: color.h  fish.h  point.h  score.h  usefreeimage.h
OpenGL/Lighting/: lectureMaterialsLighting.cpp  lectureMaterialsLighting_copy.cpp  lectureMaterialsLighting_start_copy.cpp  lectureMaterialsLighting_start_old.cpp  makefile
OpenGL/Lighting/exec/apple/: lectureMaterialsLighting_0  lectureMaterialsLighting_1a  lectureMaterialsLighting_1b  lectureMaterialsLighting_1c  lectureMaterialsLighting_1d  lectureMaterialsLighting_1e  lectureMaterialsLighting_2.bf  lectureMaterialsLighting_2.bltr  lectureMaterialsLighting_2.bt  lectureMaterialsLighting_2.fb  lectureMaterialsLighting_2.lr  lectureMaterialsLighting_2.lra  lectureMaterialsLighting_2.lrblue  lectureMaterialsLighting_2.lrd  lectureMaterialsLighting_2.lrs  lectureMaterialsLighting_2.rl  lectureMaterialsLighting_2.tb  lectureMaterialsLighting_2.trbl  lectureMaterialsLighting_3  lectureMaterialsLighting_3a  lectureMaterialsLighting_3az0  lectureMaterialsLighting_3az1  lectureMaterialsLighting_3az2  lectureMaterialsLighting_3az3  lectureMaterialsLighting_3b3  lectureMaterialsLighting_3b5  lectureMaterialsLighting_3c  lectureMaterialsLighting_3d1  lectureMaterialsLighting_3d5  lectureMaterialsLighting_4  lectureMaterialsLighting_4aa1  lectureMaterialsLighting_4aa2  lectureMaterialsLighting_4aa3  lectureMaterialsLighting_4ad1  lectureMaterialsLighting_4ad2  lectureMaterialsLighting_4ad3  lectureMaterialsLighting_4as1  lectureMaterialsLighting_4as2  lectureMaterialsLighting_4as3  lectureMaterialsLighting_4ash1  (+42 more)
OpenGL/Lighting/exec/xquartz/: lectureMaterialsLighting_0  lectureMaterialsLighting_1a  lectureMaterialsLighting_1b  lectureMaterialsLighting_1c  lectureMaterialsLighting_1d  lectureMaterialsLighting_1e  lectureMaterialsLighting_2.bf  lectureMaterialsLighting_2.bltr  lectureMaterialsLighting_2.bt  lectureMaterialsLighting_2.fb  lectureMaterialsLighting_2.lr  lectureMaterialsLighting_2.lra  lectureMaterialsLighting_2.lrblue  lectureMaterialsLighting_2.lrd  lectureMaterialsLighting_2.lrs  lectureMaterialsLighting_2.rl  lectureMaterialsLighting_2.tb  lectureMaterialsLighting_2.trbl  lectureMaterialsLighting_3  lectureMaterialsLighting_3a  lectureMaterialsLighting_3az0  lectureMaterialsLighting_3az1  lectureMaterialsLighting_3az2  lectureMaterialsLighting_3az3  lectureMaterialsLighting_3b3  lectureMaterialsLighting_3b5  lectureMaterialsLighting_3c  lectureMaterialsLighting_3d1  lectureMaterialsLighting_3d5  lectureMaterialsLighting_4  lectureMaterialsLighting_4aa1  lectureMaterialsLighting_4aa2  lectureMaterialsLighting_4aa3  lectureMaterialsLighting_4ad1  lectureMaterialsLighting_4ad2  lectureMaterialsLighting_4ad3  lectureMaterialsLighting_4as1  lectureMaterialsLighting_4as2  lectureMaterialsLighting_4as3  lectureMaterialsLighting_4ash1  (+43 more)
OpenGL/Meshes.and.Camera/: camera.cpp  camera.h  main.cpp  makefile  matrix.cpp  matrix.h  mesh.cpp
OpenGL/Meshes.and.Camera/old/: camera.cpp  camera.h  camera_slides.cpp  makefile  matrix.cpp  matrix.h  meshes.cpp
OpenGL/Paint/: README.md  makefile  paint.cpp
OpenGL/Pixmaps/: main.cpp  makefile
OpenGL/Pixmaps/exec/: main_1  main_2  main_3  main_4a  main_4b  main_5  run.sh
OpenGL/Project.01/: Requirement.md  makefile  paint.cpp
OpenGL/Ray.Caster/: CMakeLists.txt  camera.cpp  camera.h  color.h  light.h  main.cpp  makefile  material.h  matrix.cpp  matrix.h  mesh.h  object.h  ray.h  sphere.h
OpenGL/Ray.Caster/exec/: main3a  main3b  main3c
OpenGL/Ray.Caster/header/: camera.h  color.h  light.h  material.h  matrix.h  object.h  ray.h  usefreeimage.h
OpenGL/Surface.Of.Revolution/: Meshclass.h  README.md  lectureMesh.cpp  makefile
OpenGL/Textures/: makefile  textures.cpp
OpenGL/Textures/exec/apple/: textures_chick_1  textures_chick_2  textures_chick_3a  textures_chick_3b  textures_chick_4  textures_chick_5  textures_chick_6a  textures_chick_6b  textures_chick_6c  textures_kitty_1  textures_kitty_2  textures_kitty_3a  textures_kitty_3b  textures_kitty_4  textures_kitty_5  textures_kitty_6a  textures_kitty_6b  textures_kitty_6c
OpenGL/Textures/exec/xquartz/: run.sh  textures_chick_1  textures_chick_2  textures_chick_3a  textures_chick_3b  textures_chick_4  textures_chick_5  textures_chick_6a  textures_chick_6b  textures_chick_6c  textures_kitty_1  textures_kitty_2  textures_kitty_3a  textures_kitty_3b  textures_kitty_4  textures_kitty_5  textures_kitty_6a  textures_kitty_6b  textures_kitty_6c
OpenGL/Textures/pics/: chick.xcf  star.xcf
